@@ -19,12 +19,39 @@ var o_Trait;
 
 o_Trait = o_construct(
     function (args) {
+        if (typeof args === 'function') args = this.functionToArgs( args );
+
         args = args || {};
         for (var i in traitAttrs) {
             traitAttrs[i].setValueFromArgs( this, args );
         }
     },
     {
+        functionToArgs: function (func) {
+            var args = {
+                requires: [],
+                traits: [],
+                attributes: {},
+                methods: {},
+                around: {},
+                before: {},
+                after: {}
+            };
+
+            var scope = {
+                require: function (name) { args.requires.push(name) },
+                trait: function (name) { args.traits.push(name) },
+                attribute: function (name,props) { args.attributes[name] = props },
+                method: function (name,func) { args.methods[name] = func },
+                around: function (name,func) { args.around[name] = func },
+                before: function (name,func) { args.before[name] = func },
+                after: function (name,func) { args.after[name] = func }
+            };
+
+            func.apply( scope );
+
+            return args;
+        },
         install: function (obj, args) {
             var i, name;
 
