@@ -183,3 +183,53 @@ test('basic', function (t) {
 
     t.end();
 });
+
+test('function-args', function (t) {
+    var log = [];
+
+    var person = new o.Trait(function(){
+        this.attribute( 'firstName', { type:o.nonEmptyStringType, writer:true } );
+        this.attribute( 'lastName', { type:o.nonEmptyStringType, writer:true } );
+        this.attribute( 'gender', { type:new o.EnumType(['m', 'f']), writer:true } );
+        this.attribute( 'married', { type:o.booleanType, writer:true } );
+
+        this.method( 'fullName', function () {
+            return this.firstName() + ' ' + this.lastName();
+        });
+
+        this.around( 'fullName', function (original) {
+            log.push('around-FullName');
+            var name = original();
+            if (this.gender() === 'm') {
+                name = 'Mr. ' + name;
+            }
+            else {
+                name = (this.married() ? 'Mrs. ' : 'Ms. ') + name;
+            }
+            return name;
+        });
+
+        this.before( 'gender', function(){ log.push('before-gender') } );
+        this.before( 'fullName', function(){ log.push('before-fullName') } );
+
+        this.after( 'gender', function(){ log.push('after-gender') } );
+        this.after( 'fullName', function(){ log.push('after-fullName') } );
+    });
+
+    var obj = {};
+    person.install( obj );
+
+    obj.firstName('Jill');
+    obj.lastName('Smith');
+    obj.married(true);
+    t.isDeeply( log, [], 'log is empty' );
+
+    obj.gender('f');
+    t.isDeeply( log, ['before-gender', 'after-gender'], 'logged before and after' );
+    log = [];
+
+    t.is( obj.fullName(), 'Mrs. Jill Smith', 'all the pieces fit together' );
+    t.isDeeply( log, ['before-fullName', 'around-FullName', 'before-gender', 'after-gender', 'after-fullName'], 'logged before, after, and arounds in the right order' );
+
+    t.end();
+});
